fixed overflow issue

--- a/components/VideoBanner/styles.module.css
+++ b/components/VideoBanner/styles.module.css
@@ -1,5 +1,6 @@
 .main_container {
   position: relative;
+  overflow: hidden;
 }
 
 .overlay {
